# quickcontext

./: .gitignore  AI_DOCS.md  README.md  docker-compose.yml  quickcontext.example.json  quickcontext.local.example.json  requirements.txt
.github/workflows/: ci.yml
docs/: cli.md  low-memory-setup.md  mcp.md  sdk.md  service.md
engine/: __init__.py  sdk.py
engine/src/: __init__.py  artifact_index.py  artifact_semantics.py  chunker.py  cli.py  collection.py  config.py  dedup.py  describer.py  differ.py  filecache.py  index_resume.py  indexer.py  lsp_setup.py  parser_cli.py  parsing.py  pipe.py  project.py  qdrant.py  qdrant_search.py  sdk_models.py  searcher.py
engine/tests/: test_bootstrap_setup.py  test_lsp_setup.py  test_mcp_server.py  test_regressions.py  test_sdk_surface.py
qc_mcp/: __init__.py  __main__.py  server.py
quickcontext_mcp/: __init__.py  __main__.py  server.py
scripts/: augmentintent_dist_cases.json  bootstrap_quickcontext.py  bundle_benchmark.py  context_retrieval_benchmark.py  context_retrieval_cases.json  graph_retrieval_cases.json  index_phase_benchmark.py  retrieval_cases_deep.json  retrieval_cases_extended.json  search_phase_benchmark.py  setup_project_lsps.ps1  setup_quickcontext.ps1  symbol_benchmark.py  symbol_cases.json  warm_project_benchmark.py
service/: Cargo.toml
service/src/: extract.rs  import_graph.rs  protocol.rs  protocol_search.rs  query_parser.rs  ranking.rs  server.rs  structural_boost.rs  symbol_index.rs  text_index.rs  text_search.rs  types.rs
service/src/lang/: mod.rs
service/src/lsp/: client.rs  manager.rs  registry.rs
