[package]
name = "quickcontext-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Async Runtime ---
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# --- Serialization ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = { version = "2.0.1", features = ["serde"] }

# --- Search ---
regex = "1.12.3"
rust-stemmers = "1.2.0"
strsim = "0.11.1"

# --- Filesystem ---
walkdir = "2.5.0"
ignore = "0.4.25"
redb = "3.1.0"

# --- Hashing ---
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
sha2 = "0.10"

# --- Streaming Iterator (for tree-sitter QueryMatches) ---
streaming-iterator = "0.1"

# --- Tree-sitter Core ---
tree-sitter = "0.26.5"

# --- Tree-sitter Grammars ---
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-bash = "0.25.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-md = "0.5.2"
tree-sitter-regex = "0.25.0"
tree-sitter-swift = "0.7.1"
tree-sitter-scala = "0.24.0"
tree-sitter-lua = "0.4.1"
tree-sitter-elixir = "0.3.4"
tree-sitter-hcl = "1.1.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-proto = "0.4.0"
tree-sitter-xml = "0.7.0"
tree-sitter-zig = "1.1.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-ocaml = "0.24.2"
tree-sitter-r = "1.2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
